Fixed layout on tablet and mobile widths

--- a/src/components/Player/index.scss
+++ b/src/components/Player/index.scss
@@ -2,9 +2,16 @@
 
 .player {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   position: relative;
+
+  @media screen and (max-width: index.$width-laptop) {
+    height: 92vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   &-content {
     display: flex;
@@ -33,8 +40,11 @@
     }
 
     @media screen and (max-width: index.$width-laptop) {
-      transform: translate(-50%, -30%);
+      transform: none;
+      position: relative;
       width: 40%;
+      top: 0;
+      left: 0;
     }
 
     @media screen and (max-width: index.$width-laptop-s) {
